# mcp-attacks

./: README.md  client.py  pyproject.toml  requirements.txt  server.py
attacks/: tool_v1.py  tool_v2.py  tool_v3.py
experiments/: client.py  server.py
plots/: mcp_attack.py  mcp_defense.py
weather/: weather_client.py  weather_server.py
